fix: add overflow-hidden to header

--- a/schwastyle-colors.css
+++ b/schwastyle-colors.css
@@ -10,7 +10,9 @@
 
 	/* Basic Colors */
 	--background: hsl(0 0% 100%);
+	--background-inverted: hsl(0 0% 27%);
 	--foreground: hsl(0 0% 9%);
+	--foreground-inverted: hsl(0 0% 95%);
 	--hover: hsl(0 0% 95%);
 	--hover-foreground: hsl(0 0% 9%);
 	--border-shadow: hsl(0 0% 95%);
@@ -19,6 +21,8 @@
 	--border: hsl(240 6% 10%);
 	--border-input: hsla(240 6% 10% / 0.17);
 	--border-input-hover: hsla(240 6% 10% / 1);
+	--border-button: hsla(240 6% 10%);
+	--border-button-hover: hsla(240 6% 10% / 1);
 	--border-card: hsla(240 6% 10% / 0.6);
 	--dark: hsl(240 6% 10%);
 	--dark-10: hsla(240 6% 10% / 0.1);
@@ -28,19 +32,11 @@
 	--light-10: hsla(0 0% 96% / 0.1);
 	--light-40: hsla(0 0% 96% / 0.4);
 	--light-04: hsla(0 0% 96% / 0.04);
-	--accent: hsl(204 94% 94%);
+	--warning: var(--color-red-500);
+	--accent: var(--color-primary-100);
 	--accent-foreground: hsl(204 80% 16%);
 	--contrast: hsl(0 0% 0%);
-
-	/* --- UI Elements --- */
-	/* Tabs Colors */
-	--tabs-hover: oklch(91.052% 0.00106 11.805);
-	--tabs-hover-foreground: black;
-	--tabs-active: oklch(42.118% 0.01059 248.187);
-	--tabs-active-foreground: oklch(99.131% 0.00697 248.18);
-	--tabs-inactive: white;
-	--tabs-inactive-foreground: black;
-	--primaryy: red;
+	--contrast-accent: var(--color-primary-600);
 }
 
 /* .dark { */
@@ -55,7 +51,9 @@
 	--rs-keyword: var(--color-amber-300);
 
 	--background: hsl(0, 0%, 27%);
+	--background-inverted: hsl(0 0% 95%);
 	--foreground: hsl(0 0% 95%);
+	--foreground-inverted: hsl(0, 0%, 27%);
 	--hover: hsl(0 0% 38%);
 	--hover-foreground: hsl(0 0% 95%);
 	--border-shadow: hsl(0 0% 38%);
@@ -64,6 +62,8 @@
 	--border: hsl(0 0% 96%);
 	--border-input: hsla(0 0% 96% / 0.17);
 	--border-input-hover: hsla(0 0% 96% / 0.4);
+	--border-button: hsla(0 0% 96% / 0.17);
+	--border-button-hover: hsla(0 0% 96% / 0.4);
 	--border-card: hsla(0 0% 96% / 0.1);
 	--dark: hsl(0 0% 96%);
 	--dark-40: hsl(0 0% 96% / 0.4);
@@ -73,19 +73,11 @@
 	--light-10: hsla(240 6% 10% / 0.1);
 	--light-40: hsla(240 6% 10% / 0.4);
 	--light-04: hsla(240 6% 10% / 0.04);
-	--accent: hsl(204 90% 90%);
+	--warning: var(--color-red-500);
+	--accent: var(--color-primary-600);
 	--accent-foreground: hsl(204 94% 94%);
 	--contrast: hsl(0 0% 100%);
-
-	/* --- UI Elements --- */
-	/* Tabs Colors */
-	--tabs-hover: oklch(91.052% 0.00106 11.805);
-	--tabs-hover-foreground: black;
-	--tabs-active: oklch(42.118% 0.01059 248.187);
-	--tabs-active-foreground: oklch(99.131% 0.00697 248.18);
-	--tabs-inactive: white;
-	--tabs-inactive-foreground: black;
-	--primaryy: yellow;
+	--contrast-accent: var(--color-primary-200);
 }
 
 /* Fixed Colors (Skeleton-Style) */
@@ -137,6 +129,8 @@
 	/* Colors */
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
+	--color-background-inverted: var(--background-inverted);
+	--color-foreground-inverted: var(--foreground-inverted);
 	--color-hover: var(--hover);
 	--color-hover-foreground: var(--hover-foreground);
 	--color-border-shadow: var(--border-shadow);
@@ -145,6 +139,8 @@
 	--color-border: var(--border-card);
 	--color-border-input: var(--border-input);
 	--color-border-input-hover: var(--border-input-hover);
+	--color-border-button: var(--border-button);
+	--color-border-button-hover: var(--border-button-hover);
 	--color-border-card: var(--border-card);
 	--color-dark: var(--dark);
 	--color-dark-10: var(--dark-10);
@@ -154,23 +150,17 @@
 	--color-light-10: var(--light-10);
 	--color-light-40: var(--light-40);
 	--color-light-04: var(--light-04);
+	--color-warning: var(--warning);
 	--color-accent: var(--accent);
 	--color-accent-foreground: var(--accent-foreground);
 	--color-contrast: var(--contrast);
+	--color-contrast-accent: var(--contrast-accent);
 }
 
 /* UI-Elements*/
 @theme inline {
-	--color-tabs-active: var(--dark);
-	--color-tabs-inactive: var(--tabs-inactive);
-	--color-tabs-inactive-foreground: var(--tabs-inactive-foreground);
-	--color-tabs-hover: var(--tabs-hover);
-	--color-tabs-hover-foreground: var(--tabs-hover-foreground);
-	--color-tabs-active-foreground: var(--tabs-active-foreground);
-
 	--color-muted: var(--muted);
 	--color-muted-foreground: var(--muted-foreground);
-	--color-primaryy: var(--primaryy);
 }
 
 /* Documents */
